添加统一的额页面布局样式

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -1,12 +1,19 @@
 // http://ionicframework.com/docs/v2/theming/
-
-
 // App Shared Imports
 // --------------------------------------------------
 // These are the imports which make up the design of this app.
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
-
 @import "../pages/home/home";
-
 @import "../pages/city-details/city-details";
+@import "../pages/citys/citys";
+
+//统一修改menu弹开的样式
+ion-menu {
+  ion-toolbar {
+    .toolbar-background {
+      border-color: #fff;
+      background: #fff;
+    }
+  }
+}
