1.添加手机定位信息； 2.通过定位功能，获取当前位置的地理信息 3.接下来根据返回得到地理编码，调用高德API获取当前的天气信息列表；

--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -1,11 +1,16 @@
 
-.home-bg {
-  div {
-    background-color: #fff;
+.home-header {
+  .home-bg {
+    div {
+      background-color: #fff;
+    }
+  }
+  ion-title {
+    visibility: hidden;
   }
 }
 
-ion-header::after {
+.home-header::after {
   position: absolute;
   bottom: -5px;
   left: 0;
@@ -15,8 +20,4 @@ ion-header::after {
   background-repeat: repeat-x;
   background-position: 0 -2px;
   content: "";
-}
-
-.detail-nav-right {
-  visibility: hidden;
 }
