--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -5,9 +5,6 @@
       background-color: #fff;
     }
   }
-  ion-title {
-    visibility: hidden;
-  }
 }
 
 .home-header::after {
@@ -20,4 +17,45 @@
   background-repeat: repeat-x;
   background-position: 0 -2px;
   content: "";
+}
+
+/**内容区域*/
+ion-content {
+  .content-top-temperature {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .temperature {
+      width: 100%;
+      height: 40%;
+      font-size: 3.5em;
+      text-align: center;
+      display: flex;
+      justify-content: space-around;
+      align-self: center;
+      align-items: center;
+      white-space: nowrap;
+    }
+
+    .weather {
+      text-align: center;
+      font-size: 1.2em;
+    }
+
+    .city {
+      text-align: center;
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+  }
+  .content-top-detail {
+    height: 50%;
+    /*background-color: #3fff8e;*/
+  }
+
+  scroll-content {
+    overflow-y: visible;
+  }
 }
