--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -27,10 +27,23 @@ ion-content {
     flex-direction: column;
     justify-content: center;
 
+    .weather-icon {
+      text-align: center;
+      height: 130%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        width: 30%;
+        height: 30%;
+      }
+    }
+
     .temperature {
       width: 100%;
       height: 40%;
-      font-size: 3.5em;
+      font-size: 2.5em;
       text-align: center;
       display: flex;
       justify-content: space-around;
@@ -42,12 +55,19 @@ ion-content {
     .weather {
       text-align: center;
       font-size: 1.2em;
+      height: 20%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .city {
       text-align: center;
       font-size: 2em;
-      margin-bottom: 20px;
+      height: 30%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
   .content-top-detail {
