--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -19,63 +19,55 @@
   content: "";
 }
 
-/**内容区域*/
-ion-content {
-  .content-top-temperature {
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+/* 内容区域 使用ionic自带的栅格系统*/
+.home-content {
 
-    .weather-icon {
+  ion-row {
+    /*顶部城市信息*/
+    .city {
+      font-size: 2em;
       text-align: center;
-      height: 130%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      img {
-        width: 30%;
-        height: 30%;
-      }
     }
-
-    .temperature {
-      width: 100%;
-      height: 40%;
-      font-size: 2.5em;
-      text-align: center;
-      display: flex;
-      justify-content: space-around;
-      align-self: center;
-      align-items: center;
-      white-space: nowrap;
-    }
-
+    /*天气情况，文字描述*/
     .weather {
       text-align: center;
       font-size: 1.2em;
-      height: 20%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin-bottom: 1em;
     }
-
-    .city {
+    /*天气图标*/
+    .weather-icon {
       text-align: center;
-      font-size: 2em;
-      height: 30%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      /*图标样式*/
+      img {
+        width: 70%;
+        height: 70%;
+      }
+    }
+    /*具体温度值，区间*/
+    .temperature {
+      font-size: 2.5em;
+      text-align: center;
+      white-space: nowrap;
     }
   }
-  .content-top-detail {
-    height: 50%;
-    /*background-color: #3fff8e;*/
-  }
 
+}
+
+ion-content {
+  /*屏蔽页面的滚动条*/
   scroll-content {
     overflow-y: visible;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
