--- a/app/pages/citys/citys.scss
+++ b/app/pages/citys/citys.scss
@@ -1,5 +1,55 @@
+/*顶部nav的背景颜色*/
+.city-header {
+  .city-bg {
+    div {
+      background-color: #fff;
+    }
+  }
+}
+
+.city-header::after {
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-image: none;
+  background-repeat: repeat-x;
+  background-position: 0 -2px;
+  content: "";
+}
+
+/*标题栏文字居中*/
 ion-title {
   .toolbar-title {
     text-align: center;
+  }
+}
+
+/*内容区域*/
+.city-content {
+  //换行处理
+  ion-row {
+    flex-wrap: wrap;
+  }
+
+  //统一高度
+  ion-col {
+    height: 13em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    span {
+      height: 100%;
+      width: 90%;
+      border: 2px solid #737383;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2em;
+      writing-mode: vertical-lr;
+      color: #424242;
+    }
   }
 }
