--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -16,6 +16,10 @@ ion-menu {
       background: #fff;
     }
   }
+  //控制侧边菜单栏宽度
+  .menu-inner {
+    width: 260px;
+  }
 }
 
 .menu-inner {
@@ -35,6 +39,40 @@ ion-menu {
   }
 }
 
+/*侧边菜单栏统一样式修改*/
+.menu-grid {
+  margin-top: 3em;
+
+  ion-col {
+    text-align: center;
+
+    img {
+      transform: scale(0.7);
+    }
+  }
+}
+
+/*控制菜单栏文字大小*/
+.menu-list {
+  ion-list {
+    margin: 16px 0 16px 0;
+    /*按钮大小*/
+    button {
+      ion-label {
+        font-size: 1.5em;
+      }
+    }
+    /*版本信息*/
+    .copy-right {
+      width: 100%;
+      display: inline-block;
+      text-align: center;
+      position: absolute;
+      bottom: 10px;
+    }
+  }
+}
+
 /*去掉边框线*/
 ion-list > .item:first-child, ion-list > .item-wrapper:first-child .item {
   border-top: none;
@@ -43,3 +81,5 @@ ion-list > .item:first-child, ion-list > .item-wrapper:first-child .item {
 ion-list > .item:last-child, ion-list > .item-wrapper:last-child .item {
   border-bottom: none;
 }
+
+
