主页更新天气，添加记载框和，消息震动。

--- a/app/pages/citys/citys.scss
+++ b/app/pages/citys/citys.scss
@@ -50,6 +50,9 @@ ion-title {
       font-size: 2em;
       writing-mode: vertical-lr;
       color: #424242;
+      &:active {
+        background-color: #eaeaf3;
+      }
     }
   }
 }
