修复完成，定时定点重复推送本地消息； 添加设置功能页面，调整整体布局页面

--- a/app/pages/setting/setting.scss
+++ b/app/pages/setting/setting.scss
@@ -1,22 +1,16 @@
 /*顶部nav的背景颜色*/
-.city-details-header {
-  .city-details-bg {
+.setting-header {
+  .setting-bg {
     div {
       background-color: #fff;
     }
-    .hidden {
+    ion-buttons {
       visibility: hidden;
-    }
-    .back-default {
-      font-size: 2rem;
-    }
-    .toolbar-title {
-      padding-right: 7.1rem;
     }
   }
 }
 
-.city-details-header::after {
+.setting-header::after {
   position: absolute;
   bottom: -5px;
   left: 0;
@@ -28,3 +22,14 @@
   content: "";
 }
 
+/*标题栏文字居中*/
+ion-title {
+  .toolbar-title {
+    text-align: center;
+  }
+}
+
+/*内容区域*/
+.setting-content {
+  //换行处理
+}
