--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,6 +7,9 @@
 @import "../pages/home/home";
 @import "../pages/city-details/city-details";
 @import "../pages/citys/citys";
+@import "../pages/setting/setting";
+@import "../pages/author/author";
+@import "../pages/feedback/feedback";
 
 //统一修改menu弹开的样式
 ion-menu {
