--- a/app/pages/citys/citys.scss
+++ b/app/pages/citys/citys.scss
@@ -40,7 +40,7 @@ ion-title {
     justify-content: center;
     align-items: center;
 
-    span {
+    div {
       height: 100%;
       width: 90%;
       border: 2px solid #737383;
